[tool.poetry]
name = "probs-theory"
version = "0.1.0"
description = "A simple project that includes simple implementations of probability theory applications"
authors = ["Alper Balbay <itsc0508@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "probs_theory"}]

[tool.poetry.dependencies]
python = "3.11"
numpy = "^1.24.2"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.2.2"
poethepoet = "^0.19.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
flake8 = "flake8 ."
black = "black ."
isort = "isort ."
check = ["isort", "black", "flake8"]

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line-length = 140
target-version = ["py311"]
exclude = ['/.git', '/.DS_STORE']